force-app/main/default/objects/OpportunityTeamMember/fields/CreatedByRole__c.field-meta.xml
<CustomField>
    <fullName>CreatedByRole__c</fullName>
    <description>Stores the role identifier used by the automation flow that created this Opportunity Team Member. Allows sync flows to locate the correct record when Account fields change.</description>
    <inlineHelpText>Do not edit. System-managed field. Populated with the role key (e.g. &quot;Solution Executive&quot;, &quot;EISR&quot;, &quot;CSM&quot;) at the time of automated creation.</inlineHelpText>
    <label>Created By Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>