force-app/main/default/objects/OpportunityTeamMember/fields/IsSystemGenerated__c.field-meta.xml
<CustomField>
    <fullName>IsSystemGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Opportunity Team Member was automatically created by a Salesforce Flow as part of the Opp Team &amp; Revenue Split automation.</description>
    <inlineHelpText>Do not edit. Checked = created automatically by the system. Unchecked = added manually. Used by automation to determine which records can be updated or removed.</inlineHelpText>
    <label>Is System Generated</label>
    <type>Checkbox</type>
</CustomField>